<resources>
    <string name="app_name">Week 3 app</string>
    <string name="becky_solomon">Becky Solomon</string>
    <string name="_3387">3387</string>
    <string name="pablo_gustavo">Pablo Gustavo</string>
    <string name="_3002">3002</string>
    <string name="mark_dowell">Mark Dowell</string>
    <string name="_2590">2590</string>
    <string name="liza_fisher">Liza Fisher</string>
    <string name="_1874">1874</string>
    <string name="son_heung_min">Son Heung Min</string>
    <string name="_436">436</string>
    <string name="add_new_opponent">Add New \nOpponent</string>
</resources>